# HelloWorldPipeline

./: .pypirc  Jenkinsfile  README.md  pyproject.toml  setup.py
jenkins_pipeline_2024_tutorial.egg-info/: PKG-INFO  SOURCES.txt
