[tool.poetry]
name = "pypi-pipeline-2024"
version = "0.0.1"
description = "Simple Jenklins pipeline job"
authors = ["Roman Polonsky"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.10.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
